--- a/backend/env.example
+++ b/backend/env.example
@@ -1,18 +1,23 @@
-# Database Configuration
-DB_HOST=localhost
-DB_USER=your_username
-DB_PASSWORD=your_password
+# Database Configuration (TiDB Cloud - MySQL Compatible)
+# Option 1: Individual parameters
+DB_HOST=gateway01.eu-central-1.prod.aws.tidbcloud.com
+DB_USER=22gYCn4NgAaSE8F.root
+DB_PASSWORD=your_password_here
 DB_NAME=bookstore_management
+DB_PORT=4000
+
+# Option 2: Connection string (alternative)
+# DATABASE_URL=mysql://22gYCn4NgAaSE8F.root:<PASSWORD>@gateway01.eu-central-1.prod.aws.tidbcloud.com:4000/bookstore_management
 
 # JWT Configuration
 JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_random
 
 # Server Configuration
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 
 # CORS Configuration (for production)
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=https://your-frontend-domain.com
 
 # Security
 BCRYPT_ROUNDS=12
