--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,12 @@
 {
   "name": "bookstore-backend",
   "version": "1.0.0",
-  "description": "BookStore Management System Backend API",
+  "description": "BookStore Management System Backend API with MySQL",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "test:db": "node quick-start-tidb.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -13,7 +14,7 @@
     "bookstore",
     "api",
     "express",
-    "postgresql"
+    "mysql"
   ],
   "author": "",
   "license": "ISC",
@@ -29,7 +30,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.11.3",
+    "mysql2": "^3.6.5",
     "winston": "^3.11.0"
   },
   "devDependencies": {
