--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,26 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=00000
+# Database Configuration (TiDB Cloud - MySQL Compatible)
+# Option 1: Individual parameters
+DB_HOST=gateway01.eu-central-1.prod.aws.tidbcloud.com
+DB_USER=22gYCn4NgAaSE8F.root
+DB_PASSWORD=mNt5DdafHYfF6Bne
 DB_NAME=bookstore_management
-JWT_SECRET= "Randomstring"
+DB_PORT=4000
+
+# Option 2: Connection string (alternative)
+# DATABASE_URL=mysql://22gYCn4NgAaSE8F.root:<PASSWORD>@gateway01.eu-central-1.prod.aws.tidbcloud.com:4000/bookstore_management
+
+# JWT Configuration
+JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_random
+
+# Server Configuration
 PORT=5000
+NODE_ENV=production
+
+# CORS Configuration (for production)
+CORS_ORIGIN=https://bookstorefrontend-yrgv.onrender.com
+
+# Security
+BCRYPT_ROUNDS=12
+
+# Logging
+LOG_LEVEL=info 
